* Jan 9 2001 hship

Minor changes related to the "package reorg madness" in the framework.

* Jan 9 2001 hship

Change copyrights for 2001.
Create a ShowMessage component.
Add log4j.jar to the classpath.

* Jan 4 2001 hship

Modify the tutorial to use the installed copy of the Tutorial.war, to test
the fix for [127536] Class load error for .wars.

* Jan 3 2001 hship

Update the tutorial to demonstrate localization of context and private assets.

* Jan 2 2001 hship

Add a tutorial to demonstration dynamically changing the locale.

* Jan 2 2001 hship

Minor corrections to some tutorial code.

* Dec 29 2000 hship

Extensive changes related to the Savage Refactoring of Tapestry.

* Dec 29 2000 hship

Change the hangman tutorial to propertly specify the Visit class in the application
specification.

* Dec 28 2000 hship

Change Hangman tutorial due to changes in RadioGroup and Radio components.

* Dec 27 2000 hship

Added the new Hangman tutorial.

* Dec 26 2000 hship

Add a "borrowed books" listing to the MyBooks page, with a quick button to return books to their owners.
Add a Borrow component to create a link for borrowing a book.
Other reorgs and cleanups.
Provide larger (30 book) started Vlib database.

* Dec 22 2000 hship

Simplify some Vlib pages, now that Tapestry supports conversion between EJBObject and Handle automatically.
Remove the lendCount attribute from the IBook EJB.
Convert Vlib to use InstantDB intead of Hypersonic SQL.
Change VlibBeans to automatically configure jBoss using the new JBE_SPLICE code.

* Dec 20 2000 hship

Update the Vlib application to use the new FieldLabel component.

* Dec 19 2000 hship

Fix a bug in VlibBeans where the Operations.getPerson() method built invalid SQL
for the query.
Fill out much more of the functionlity of Vlib/JSP, and add closure (links point
to a simply Not Yet Implemented page).

* Dec 13 2000 hship

Lots of changes in the Vlib to make use of the new validating text field components.