@@ -29,13 +29,14 @@ JBOSS_CONF_DIR = $(JBOSS_DIR)/conf/default
 # Rule to configure the jBoss server for the VlibBeans
 # demo.
 
-configure-jboss:  setup-jbe-utils
+configure-jboss:  setup-jbe-util
 ifeq ("$(JBOSS_DIR)","")
 	$(error You must set JBOSS_DIR (in $(SYS_MAKEFILE_DIR)/config/LocalConfig.mk) \
 	before configuring jBoss.)
 endif	
 	@$(ECHO) "\n*** Installing Primix Vlib database ... ***\n"
-	@$(CAT) jboss/vlib.tar.gz | ($(CD) $(JBOSS_DIR)/db && $(TAR) xz)
+	@$(CAT) jboss/vlib.tar.gz | \
+		($(CD) $(JBOSS_DIR)/db && $(TAR) $(TAR_EXTRACT_OPT) $(TAR_GZIP_OPT))
 	@$(CP) jboss/vlib.properties $(JBOSS_CONF_DIR)
 	@$(ECHO) "\n*** Splicing changes to jboss.conf ... ***\n"
 	@$(call JBE_SPLICE,PrimixVlib,$(JBOSS_CONF_DIR)/jboss.conf,jboss/jboss.conf.splice)
@@ -43,9 +44,9 @@ endif
 	@$(call JBE_SPLICE,PrimixVlib,$(JBOSS_CONF_DIR)/jboss.jcml,jboss/jboss.jcml.splice, \
 		-before \</server\>)
 	@$(ECHO) "\n*** Setting up JNDI properties ... ***\n"
-	@$(CP) --force jboss/jndi.properties $(JBOSS_CONF_DIR)
+	@$(CP) $(CP_FORCE_OPT) jboss/jndi.properties $(JBOSS_CONF_DIR)
 	@$(ECHO) "\n*** Copying runtime libraries ... ***\n"
-	@$(CP) --force $(INSTALL_DIR)/Tapestry.jar $(JBOSS_DIR)/lib/ext
+	@$(CP) $(CP_FORCE_OPT) $(INSTALL_DIR)/Tapestry.jar $(JBOSS_DIR)/lib/ext
 	@$(ECHO) "\n*** jBoss is ready to run ***\n"
 
 
