@@ -1,3 +1,7 @@
+* Jan 10 2001 hship
+
+Fix the configure-jboss rule to depend on setup-jbe-util (not -utils).
+
 * Jan 9 2001 hship
 
 Minor changes related to the "package reorg madness" in the framework.
